force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>Phase 1 Data Aggregation from VMS/Track</description>
    <label>Property</label>
    <pluralLabel>Properties</pluralLabel>
</CustomObject>