force-app/main/default/objects/Property__c/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <description>Phase 1 Data Aggregation from VMS/Track</description>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>