force-app/main/default/objects/Property__c/Last_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inspection_Date__c</fullName>
    <description>Phase 1 Data Aggregation from VMS/Track</description>
    <label>Last Inspection Date</label>
    <type>Date</type>
</CustomField>