force-app/main/default/objects/Property__c/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <description>Phase 1 Data Aggregation from VMS/Track</description>
    <label>Property Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>