force-app/main/default/objects/Property__c/Rental_Status__c.field-meta.xml
<CustomField>
    <fullName>Rental_Status__c</fullName>
    <description>Phase 1 Data Aggregation from VMS/Track</description>
    <label>Rental Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rental Program</fullName>
            </value>
            <value>
                <fullName>HOA Only</fullName>
            </value>
            <value>
                <fullName>Long Term Lease</fullName>
            </value>
            <value>
                <fullName>Maintenance Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>