force-app/main/default/objects/Property__c/Track_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Track_Unit_ID__c</fullName>
    <description>Phase 1 Data Aggregation from VMS/Track</description>
    <externalId>true</externalId>
    <label>Track Unit ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>