force-app/main/default/objects/Property__c/VMS_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>VMS_Account_ID__c</fullName>
    <description>Phase 1 Data Aggregation from VMS/Track</description>
    <externalId>true</externalId>
    <label>VMS Account ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>